# Luna_Bot_Discord

./: Elos e seus pontos  README.md  main.py  pyproject.toml
cogs/: duel_cogs.py  guide_cog.py  profile_cog.py  ranking_cog.py  registration_cog.py
database/: connection.py  duel_service.py  models.py  player_service.py
ui/: duel_ui.py  modals.py  player_card_ui.py  registration_ui.py  views.py
utils/: elo_calculator.py  embeds.py
